fix vw/scrollbar bug

--- a/style.css
+++ b/style.css
@@ -163,11 +163,12 @@ body {
     background-image: url('assets/lighthouse.jpg');
     background-repeat:no-repeat;
     background-size: cover;
-    width: 100vw;
+    width: calc(100vw - (100vw - 100%));
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 18px;
 }
 
 .logo {
